--- a/css/styles.css
+++ b/css/styles.css
@@ -2,3 +2,11 @@
 body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
 .w3-bar-block .w3-bar-item {padding:20px}
 .checked {color: gold;}
+
+
+footer.footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
